# opam-repository

./: .gitignore  .gitlab-ci.yml  README.md  minimal.Dockerfile  opam.Dockerfile  pyproject.toml  remote-files.sha256  runtime-build-dependencies.Dockerfile  runtime-build-test-dependencies.Dockerfile  runtime-dependencies.Dockerfile  runtime-prebuild-dependencies.Dockerfile
rust/: Cargo.toml
rust/librustzcash/: Cargo.toml
rust/rustc-bls12-381/: Cargo.toml  README.md
rust/rustc-bls12-381/include/: rustc_bls12_381.h
rust/rustc-bls12-381/src/: fq12.rs  fr.rs  g1.rs  g2.rs  lib.rs  pairing.rs  reader.rs  writer.rs
scripts/: Dockerfile_build_deps.template  Dockerfile_hidapi.template  Dockerfile_minimal.template  Dockerfile_opam.template  README.md  build-libusb-hidapi.sh  create_apk.hidapi.sh  create_apk.opam.sh  create_docker_image.build_deps.sh  create_docker_image.minimal.sh  create_docker_image.opam.sh  create_docker_image.runtime-build-dependencies.sh  create_docker_image.runtime-build-test-dependencies.sh  create_docker_image.runtime-dependencies.sh  create_docker_image.runtime-prebuild-dependencies.sh  create_docker_image.sh  docker.sh  docker_merge_manifests.sh  docker_push_all.sh  docker_registry_auth.sh  fetch_sources.sh  hidapi-0.9.0.APKBUILD  mirror_to_ecr.sh  opam-2.0.0.APKBUILD  opam-2.0.0_rc3.APKBUILD  opam-2.0.3.APKBUILD  version.sh
scripts/python_deps/: requirements.txt
