[package]
name = "rustc-bls12-381"
version = "0.7.2"
authors = ["Danny Willems <be.danny.willems@gmail.com>"]
edition = "2018"

[lib]
name = "rustc_bls12_381"
path = "src/lib.rs"
crate-type = ["staticlib"]


[dependencies]
ff = "0.6"
pairing = "0.16"
group = "0.6.0"
libc = "0.2"
# Looks like it is required by ff and pairing
rand = "0.7"
rand_core = "0.5.1"
